# bt_api_bitget

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_bitget/: __init__.py  plugin.py  registry_registration.py
src/bt_api_bitget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bt_api_bitget/containers/: __init__.py
src/bt_api_bitget/containers/accounts/: __init__.py  bitget_account.py
src/bt_api_bitget/containers/balances/: __init__.py  bitget_balance.py
src/bt_api_bitget/containers/orderbooks/: __init__.py  bitget_orderbook.py
src/bt_api_bitget/containers/orders/: __init__.py  bitget_order.py
src/bt_api_bitget/containers/tickers/: __init__.py  bitget_ticker.py
src/bt_api_bitget/containers/trades/: __init__.py  bitget_trade.py
src/bt_api_bitget/errors/: __init__.py  bitget_translator.py
src/bt_api_bitget/exchange_data/: __init__.py
src/bt_api_bitget/feeds/live_bitget/: __init__.py  request_base.py  spot.py  swap.py
tests/containers/accounts/: test_bitget_account.py
tests/containers/balances/: test_bitget_balance.py
tests/containers/exchanges/: test_bitget_exchange_data.py
tests/containers/orderbooks/: test_bitget_orderbook.py
tests/containers/orders/: test_bitget_order.py
tests/containers/tickers/: test_bitget_ticker.py
tests/containers/trades/: test_bitget_trade.py
tests/errors/: test_bitget_translator.py
tests/exchange_registers/: test_register_bitget.py
tests/feeds/: test_bequant_bitget_coinbase_request_base.py
